examples/kong-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
  namespace: kong
  annotations:
    cert-manager.io/cluster-issuer: openbao-issuer
    cert-manager.io/common-name: "*.example.com"
spec:
  gatewayClassName: kong
  listeners:
  - name: kong-tls-passthrough
    hostname: "*.example.com"
    port: 9443
    protocol: TLS
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TLSRoute
  - name: kong-https
    hostname: "*.example.com"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: example-com-tls
