examples/kong-gateway/httproute-httpbin-svc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: httpbin.example.com
spec:
  parentRefs:
  - name: kong
    namespace: kong
    kind: Gateway
  hostnames:
  - httpbin.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 80
